--- a/notebooks/00_eda.ipynb
+++ b/notebooks/00_eda.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "43339be6",
+   "metadata": {},
+   "source": [
+    "### EDA + Feature Engineering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f6ce9430",
