add DVC pipeline with preprocess and train stages

--- a/notebooks/00_eda.ipynb
+++ b/notebooks/00_eda.ipynb
@@ -5,7 +5,7 @@
    "id": "43339be6",
    "metadata": {},
    "source": [
-    "### EDA + Feature Engineering"
+    "### Exploratory Data Analysis"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "62844c95",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
    "source": [
     "# Load Data\n",
     "\n",
-    "DATA_PATH = '../data/data.csv'\n",
+    "DATA_PATH = '\"../data/raw_data.csv\"'\n",
     "df = pd.read_csv(DATA_PATH)\n",
     "print(df.shape)\n",
     "df.head()"
@@ -434,81 +434,6 @@
     "sns.heatmap(corr, annot=True, cmap='coolwarm', fmt='.2f')\n",
     "plt.title('Correlation Heatmap of Transaction Features')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "c7c2b92a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Feature Engineering – Balance Differences\n",
-    "df['balance_diff_orig'] = df['oldbalanceOrg'] - df['newbalanceOrig']\n",
-    "df['balance_diff_dest'] = df['newbalanceDest'] - df['oldbalanceDest']\n",
-    "\n",
-    "# Feature Reduction (for linear models here for logistic regression)\n",
-    "df = df.drop(columns=[\n",
-    "    'oldbalanceOrg',\n",
-    "    'newbalanceOrig',\n",
-    "    'oldbalanceDest',\n",
-    "    'newbalanceDest'\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ecf8728b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(columns=['amount_bin'], inplace=True)\n",
-    "df.fillna(0, inplace=True)\n",
-    "\n",
-    "le = LabelEncoder()\n",
-    "df['type_enc'] = le.fit_transform(df['type'])\n",
-    "\n",
-    "df.drop(['nameOrig', 'nameDest', 'type'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7607a02d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save processed data\n",
-    "\n",
-    "df.to_csv('../data/processed_data.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b1b21de3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(63626, 10)\n",
-      "isFraud\n",
-      "0    63544\n",
-      "1       82\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Save sample data\n",
-    "\n",
-    "sample = df.groupby('isFraud', group_keys=False).apply(lambda x: x.sample(frac=0.01, random_state=42))\n",
-    "sample.to_csv('../data/sample.csv', index=False)\n",
-    "print(sample.shape)\n",
-    "print(sample['isFraud'].value_counts())"
    ]
   },
   {
