--- a/notebooks/01_exp.ipynb
+++ b/notebooks/01_exp.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "cb990d16",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
    "source": [
     "# Load data \n",
     "\n",
-    "df = pd.read_csv('../data/processed_data.csv')\n",
+    "df = pd.read_csv('../data/data.csv')\n",
     "print(df.shape)\n",
     "df.head()"
    ]
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "238bf018",
    "metadata": {},
    "outputs": [
@@ -322,6 +322,8 @@
     "# MLflow\n",
     "\n",
     "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
+    "logging.getLogger(\"mlflow\").setLevel(logging.ERROR)\n",
+    "logging.getLogger(\"urllib3\").setLevel(logging.ERROR)\n",
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "with mlflow.start_run(run_name=\"logistic_regression_v1\"):\n",
