--- a/notebooks/03_exp.ipynb
+++ b/notebooks/03_exp.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ea6cd8f1",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/processed_data.csv')\n",
+    "df = pd.read_csv('../data/data.csv')\n",
     "print(df.shape)"
    ]
   },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "97d7d59e",
    "metadata": {},
    "outputs": [
@@ -173,6 +173,8 @@
     "# MLflow\n",
     "\n",
     "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
+    "logging.getLogger(\"mlflow\").setLevel(logging.ERROR)\n",
+    "logging.getLogger(\"urllib3\").setLevel(logging.ERROR)\n",
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "with mlflow.start_run(run_name=\"xgboost_v1\"):\n",
