--- a/notebooks/02_exp.ipynb
+++ b/notebooks/02_exp.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3f5b591b",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
    "source": [
     "# load data\n",
     "\n",
-    "df = pd.read_csv('../data/processed_data.csv')\n",
+    "df = pd.read_csv('../data/data.csv')\n",
     "print(df.shape)"
    ]
   },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "49a7d2d3",
    "metadata": {},
    "outputs": [
@@ -179,6 +179,8 @@
     "# MLflow\n",
     "\n",
     "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
+    "logging.getLogger(\"mlflow\").setLevel(logging.ERROR)\n",
+    "logging.getLogger(\"urllib3\").setLevel(logging.ERROR)\n",
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "\n",
